<resources>
    <string name="app_name">Budget Manager</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="insert_account">Insert account</string>
    <string name="name">Name</string>
    <string name="balance">Balance</string>
    <string name="update_account">Update account</string>
    <string name="delete">Delete</string>
    <string name="open" translatable="false">open</string>
    <string name="close" translatable="false">close</string>
    <string name="insert_category">Insert category</string>
    <string name="select_category_type">Select category type</string>
    <string name="earnings">Earnings</string>
    <string name="expenses">Expenses</string>
    <string name="update_category">Update category</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="List_accounts">List accounts</string>
    <string name="List_transactions">List transactions</string>
    <string name="Update">Update</string>
    <string name="List_category">List category</string>
    <string name="Add_category">Add category</string>
    <string name="Update_category">Update category</string>
    <string name="Add_transaction">Add transaction</string>
    <string name="UpdateTransaction">Update Transaction</string>
    <string name="english" translatable="false">English</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="language">Language</string>
    <string name="pick_date">Pick date</string>
    <string name="comments">Comments</string>
    <string name="value">Value</string>
    <string name="Category">Category</string>
    <string name="Account">Account</string>
    <string name="add_transaction">Add transaction</string>
    <string name="transaction">Transaction</string>
    <string name="isValid">All fields must be filled</string>
    <string name="added">Category successfuly added.</string>
    <string name="Language_already_selected">Language already selected!</string>
    <string name="login">LogIn</string>
    <string name="fill_username_and_password">Please fill username and password!</string>
    <string name="signin">Sign In</string>
    <string name="session_expired">Session expired</string>
    <string name="session_expired_message">Session has been expired. Please sign in.</string>
    <string name="api_error_something_went_wrong">Ups! Something went wrong. Please try again.</string>
    <string name="error_something_went_wrong">Ups! Something went wrong. Please try again.</string>
    <string name="hello">hello</string>
    <string name="api_error_wrong_login">Wrong username or password.</string>
    <string name="SIGNIN">Sign in</string>
    <string name="success">Success</string>
    <string name="ony_edit_your_reports1">only edit your reports</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="logout">logout</string>
    <string name="logout_question">Exit</string>
    <string name="fill_title_and_description">Please fill title and description!</string>
    <string name="successfull_updated_account">Account has been successfully updated!</string>
    <string name="successfull_deleted_account">Account has been successfully deleted!</string>
    <string name="delete_account">Delete account</string>
    <string name="question_delete_account">Are you sure you want delete this account?</string>
    <string name="successfull_updated_category">Category has been successfully updated!</string>
    <string name="fill_name_and_transactiontype">Please fill name and transaction type</string>
    <string name="successfull_deleted_category">Category has been successfully deleted!</string>
    <string name="delete_category">Delete category</string>
    <string name="question_delete_category">Are you sure you want delete this category</string>
    <string name="delete_transaction">Delete transaction</string>
    <string name="question_delete_transaction">Are you sure</string>
    <string name="successfull_updated_transaction">Transaction has been successfully updated!</string>
    <string name="successfull_deleted_transaction">Transaction has been successfully deleted!</string>
    <string name="fill_all_fields">Please fill in all fields!</string>
    <string name="ony_edit_your_categorys">Edit only your categories</string>
    <string name="only_edit_your_accounts">Edit only your accounts</string>
    <string name="only_edit_your_transactions">Edit only your transactions</string>
    <string name="title_activity_maps">Maps</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="refresh">Refresh</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>


</resources>