<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:icon="@drawable/ic_baseline_language_24">

    <item
        android:id="@+id/action_language"
        android:icon="@drawable/ic_baseline_language_24"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/language">

        <menu>

            <item
                android:id="@+id/english"
                android:icon="@mipmap/english_round"
                android:title="@string/english" />

            <item
                android:id="@+id/portuguese"
                android:icon="@mipmap/portuguese_round"
                android:title="@string/portuguese" />

        </menu>
    </item>

</menu>